kubernetes/apps/forgejo-system/forgejo/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: forgejo-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: forgejo
    egress:
      - toFQDNs:
          - matchName: api.github.com
          - matchName: codeberg.org
          - matchName: git.sr.ht
          - matchName: github.com
          - matchName: gitlab.com
          - matchName: "release-assets.actions.githubusercontent.com"
          - matchPattern: "*.githubusercontent.com"
        toPorts:
          - ports:
              - port: "22"
              - port: "443"
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forgejo-egress-internal
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: forgejo
  egress:
    - toEndpoints:
        - matchLabels:
            app: forgejo-dragonfly
      toPorts:
        - ports:
            - port: "6379"
